// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div
    class="my-class-name"
  >
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Select /> should pass error 1`] = `
.emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

.emotion-3 {
  margin: 0;
  color: var(--pv-color-wrong);
  font-weight: var(--pv-text-c2-weight);
  font-size: var(--pv-text-c2-size);
  line-height: var(--pv-text-c2-height);
  letter-spacing: var(--pv-text-c2-spacing);
  margin-top: 2px;
}

.emotion-4 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.emotion-5 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
}

.emotion-6 {
  outline: 0;
  max-width: calc(100% - 32px);
  min-width: 16px;
  max-height: calc(100% - 32px);
  min-height: 16px;
  border-radius: 4px;
  box-shadow: var(--pv-shadow-light-low);
  background-color: var(--pv-color-white);
  min-width: 240px;
}

.emotion-7 {
  border-color: var(--pv-color-gray-3);
  border-style: solid;
  border-width: 0px 0px 1px 0px;
}

.emotion-8 {
  padding: var(--pv-size-base-3) var(--pv-size-base-3) var(--pv-size-base-2);
}

.emotion-9 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-9::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-9::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-9:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-9::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-9:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-9:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-9:disabled::-webkit-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-9:disabled::-moz-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-9:disabled:-ms-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-9:disabled::placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-9:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-9:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-10 {
  padding: var(--pv-size-base-3) var(--pv-size-base-2);
}

.emotion-11 {
  margin: 0;
  color: var(--pv-color-gray-10);
  font-weight: var(--pv-text-b2-weight);
  font-size: var(--pv-text-b2-size);
  line-height: var(--pv-text-b2-height);
  letter-spacing: var(--pv-text-b2-spacing);
}

<body>
  <div>
    <div>
      <button
        aria-autocomplete="list"
        aria-controls="test-id-listbox"
        aria-expanded="true"
        aria-invalid="true"
        aria-placeholder="true"
        class="emotion-0"
        id="test-id-toggle-button"
        role="combobox"
        type="button"
      >
        <svg
          aria-disabled="false"
          aria-hidden="true"
          class="emotion-1"
          fill="none"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-hidden="true"
          autocomplete="off"
          class="emotion-2"
          id="test-id"
          tabindex="-1"
          type="text"
          value=""
        />
      </button>
      <p
        class="emotion-3"
      >
        Error text
      </p>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="emotion-4"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-5"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="emotion-6"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-8"
        >
          <input
            autocapitalize="none"
            autocomplete="off"
            autocorrect="false"
            class="emotion-9"
            id="test-id-input"
            placeholder="Search"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="emotion-10"
      >
        <p
          class="emotion-11"
        >
          No options
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Select /> should pass loading 1`] = `
.emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

.emotion-3 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.emotion-4 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
}

.emotion-5 {
  outline: 0;
  max-width: calc(100% - 32px);
  min-width: 16px;
  max-height: calc(100% - 32px);
  min-height: 16px;
  border-radius: 4px;
  box-shadow: var(--pv-shadow-light-low);
  background-color: var(--pv-color-white);
  min-width: 240px;
}

.emotion-6 {
  border-color: var(--pv-color-gray-3);
  border-style: solid;
  border-width: 0px 0px 1px 0px;
}

.emotion-7 {
  padding: var(--pv-size-base-3) var(--pv-size-base-3) var(--pv-size-base-2);
}

.emotion-8 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-8::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-8:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::-webkit-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::-moz-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled:-ms-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-8:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-9 {
  padding: var(--pv-size-base-3) var(--pv-size-base-2);
}

.emotion-10 {
  margin: 0;
  color: var(--pv-color-gray-10);
  font-weight: var(--pv-text-b2-weight);
  font-size: var(--pv-text-b2-size);
  line-height: var(--pv-text-b2-height);
  letter-spacing: var(--pv-text-b2-spacing);
}

<body>
  <div>
    <div>
      <button
        aria-autocomplete="list"
        aria-controls="test-id-listbox"
        aria-expanded="true"
        aria-placeholder="true"
        class="emotion-0"
        id="test-id-toggle-button"
        role="combobox"
        type="button"
      >
        <svg
          aria-disabled="false"
          aria-hidden="true"
          class="emotion-1"
          fill="none"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-hidden="true"
          autocomplete="off"
          class="emotion-2"
          id="test-id"
          tabindex="-1"
          type="text"
          value=""
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="emotion-3"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-4"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="emotion-5"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7"
        >
          <input
            autocapitalize="none"
            autocomplete="off"
            autocorrect="false"
            class="emotion-8"
            disabled=""
            id="test-id-input"
            placeholder="Search"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <p
          class="emotion-10"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Select /> should pass options 1`] = `
.emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

.emotion-3 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
}

.emotion-4 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
}

.emotion-5 {
  outline: 0;
  max-width: calc(100% - 32px);
  min-width: 16px;
  max-height: calc(100% - 32px);
  min-height: 16px;
  border-radius: 4px;
  box-shadow: var(--pv-shadow-light-low);
  background-color: var(--pv-color-white);
  min-width: 240px;
}

.emotion-6 {
  border-color: var(--pv-color-gray-3);
  border-style: solid;
  border-width: 0px 0px 1px 0px;
}

.emotion-7 {
  padding: var(--pv-size-base-3) var(--pv-size-base-3) var(--pv-size-base-2);
}

.emotion-8 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  font-family: inherit;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: var(--pv-size-base-7);
  color: var(--pv-color-black);
  border-color: var(--pv-color-gray-8);
}

.emotion-8::-webkit-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8::-moz-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8:-ms-input-placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8::placeholder {
  color: var(--pv-color-gray-9);
}

.emotion-8:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-8:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::-webkit-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::-moz-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled:-ms-input-placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:disabled::placeholder {
  color: var(--pv-color-gray-7);
}

.emotion-8:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-8:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-9 {
  max-height: 36vh;
  overflow-y: auto;
  margin: 0;
  list-style-type: none;
  position: relative;
  padding: 10px 0;
}

.emotion-10 {
  padding: 0px var(--pv-size-base-2);
  font-family: inherit;
  outline: none;
  width: 100%;
  height: var(--pv-size-base-7);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 200ms;
  transition: background-color 200ms;
  background-color: transparent;
  border: none;
  box-sizing: border-box;
  gap: var(--pv-size-base-2);
  cursor: pointer;
  color: var(--pv-color-black);
}

.emotion-10:hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-10:focus-visible,
.emotion-10[data-focused="true"] {
  background-color: var(--pv-color-gray-4);
}

.emotion-10:active,
.emotion-10[aria-selected="true"] {
  background-color: var(--pv-color-gray-5);
}

.emotion-11 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<body>
  <div>
    <div>
      <button
        aria-autocomplete="list"
        aria-controls="test-id-listbox"
        aria-expanded="true"
        aria-placeholder="true"
        class="emotion-0"
        id="test-id-toggle-button"
        role="combobox"
        type="button"
      >
        <svg
          aria-disabled="false"
          aria-hidden="true"
          class="emotion-1"
          fill="none"
          height="24px"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-hidden="true"
          autocomplete="off"
          class="emotion-2"
          id="test-id"
          tabindex="-1"
          type="text"
          value=""
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="emotion-3"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-4"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="emotion-5"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <div
        class="emotion-6"
      >
        <div
          class="emotion-7"
        >
          <input
            autocapitalize="none"
            autocomplete="off"
            autocorrect="false"
            class="emotion-8"
            id="test-id-input"
            placeholder="Search"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <ul
        class="emotion-9"
        id="test-id-listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="false"
          class="emotion-10"
          data-option-index="0"
          id="test-id-option-0"
          role="option"
          tabindex="-1"
        >
          <span
            class="emotion-11"
          >
            test-1
          </span>
        </li>
        <li
          aria-selected="false"
          class="emotion-10"
          data-option-index="1"
          id="test-id-option-1"
          role="option"
          tabindex="-1"
        >
          <span
            class="emotion-11"
          >
            test-2
          </span>
        </li>
      </ul>
    </div>
  </div>
</body>
`;

exports[`<Select /> should render with default multiple styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div>
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Select /> should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div>
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Select /> sizes size "large" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-8);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div>
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Select /> sizes size "medium" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-7);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div>
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Select /> sizes size "small" 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: var(--pv-color-black);
  font-weight: var(--pv-text-c1-weight);
  font-size: var(--pv-text-c1-size);
  line-height: var(--pv-text-c1-height);
  letter-spacing: var(--pv-text-c1-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: none;
  box-sizing: border-box;
  width: 100%;
  border-radius: 4px;
  padding: 0 calc(var(--pv-size-base-2) + 24px) 0 var(--pv-size-base-2);
  background-color: var(--pv-color-gray-1);
  border-style: solid;
  border-width: 1px;
  -webkit-transition: background-color 200ms,color 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,border-color 200ms;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: left;
  cursor: pointer;
  font-family: inherit;
  height: var(--pv-size-base-6);
  position: relative;
  border-color: var(--pv-color-gray-8);
}

.emotion-0:hover {
  border-color: var(--pv-color-gray-10);
}

.emotion-0:disabled {
  cursor: not-allowed;
  border-color: var(--pv-color-gray-5);
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled) {
  color: var(--pv-color-black);
}

.emotion-0:not(:disabled)[aria-placeholder] {
  color: var(--pv-color-gray-9);
}

.emotion-0:not(:disabled)[aria-invalid] {
  border-color: var(--pv-color-wrong);
}

.emotion-0:not(:disabled):focus-visible {
  border-color: var(--pv-color-secondary);
}

.emotion-1 {
  position: absolute;
  right: 0px;
  top: calc(50% - 12px);
  margin: 0px var(--pv-size-base);
  color: var(--pv-color-gray-10);
}

.emotion-1[aria-disabled="true"] {
  color: inherit;
}

.emotion-2 {
  bottom: 0;
  left: 0;
  height: 100%;
  position: absolute;
  opacity: 0;
  pointer-events: none;
  width: 100%;
  box-sizing: border-box;
}

<div>
    <button
      aria-autocomplete="list"
      aria-controls="test-id-listbox"
      aria-expanded="false"
      aria-placeholder="true"
      class="emotion-0"
      id="test-id-toggle-button"
      role="combobox"
      type="button"
    >
      <svg
        aria-disabled="false"
        aria-hidden="true"
        class="emotion-1"
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.39 14.512a.5.5 0 01-.78 0l-2.96-3.7A.5.5 0 019.04 10h5.92a.5.5 0 01.39.812l-2.96 3.7z"
          fill="currentColor"
        />
      </svg>
      <input
        aria-hidden="true"
        autocomplete="off"
        class="emotion-2"
        id="test-id"
        tabindex="-1"
        type="text"
        value=""
      />
    </button>
  </div>
</DocumentFragment>
`;
